# openakita

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  DEPENDENCIES.md  DEPLOY.md  MEMORY.md  PROMPT_build.md  PROMPT_plan.md  README.md  README_CN.md  RELEASE.md  SOUL.md  THIRD_PARTY_NOTICES.md  USER.md  deploy.ps1  deploy.sh  pyproject.toml  requirements.txt  run_tests.py
.cursor/rules/: project-rules.md
.github/workflows/: ci.yml  release-dryrun.yml  release.yml
apps/setup-center/: package-lock.json  package.json
apps/setup-center/src/: App.tsx  icons.tsx  main.tsx  styles.css  types.ts
apps/setup-center/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/setup-center/src-tauri/capabilities/: default.json
apps/setup-center/src-tauri/src/: main.rs  migrations.rs
apps/setup-center/src-tauri/windows/: hooks.nsh  installer.nsi
apps/setup-center/src/i18n/: en.json  index.ts  zh.json
apps/setup-center/src/views/: ChatView.tsx  IMView.tsx  SkillManager.tsx  TokenStatsView.tsx
data/: llm_endpoints.json.example
docs/: README.md  configuration.md  deploy.md  deploy_en.md  desktop-app-guide.md  desktop-app-guide_en.md  desktop-terminal-improvements.md  getting-started.md  im-channels.md  llm-tool-call-formats.md  system-commands.md  test-cases.md
examples/: .env.example
identity/personas/: boyfriend.md  business.md  butler.md  default.md  family.md  girlfriend.md  jarvis.md  tech_expert.md  user_custom.md
mcps/: README.md
prompts/: selfcheck_system.md
research/: AGENT_FRAMEWORK_RESEARCH_2024_2026.md
scripts/: cleanup_releases.py  deploy.ps1  deploy.sh  generate_latest_json.py  llm_diag.py  quickstart.ps1  quickstart.sh  version.py
skills/datetime-tool/: SKILL.md
skills/datetime-tool/references/: REFERENCE.md
skills/datetime-tool/scripts/: get_time.py
skills/file-manager/: SKILL.md
skills/file-manager/scripts/: file_ops.py
skills/system/: healthcheck_dingtalk.md
skills/system/run-shell/: SKILL.md
specs/: core-agent.md  skill-system.md  tool-system.md
src/myagent/: __init__.py  config.py  main.py
src/myagent/channels/: gateway.py
src/myagent/core/: __init__.py  agent.py  brain.py  identity.py  memory.py  ralph.py
src/myagent/evolution/: __init__.py  analyzer.py  generator.py  installer.py  self_check.py
src/myagent/memory/: __init__.py  consolidator.py  extractor.py  manager.py  types.py
src/myagent/scheduler/: executor.py
src/myagent/skills/: __init__.py  base.py  catalog.py  loader.py  market.py  parser.py  registry.py
src/myagent/storage/: __init__.py  database.py  models.py
src/myagent/testing/: __init__.py  fixer.py  judge.py  runner.py
src/myagent/testing/cases/: __init__.py
src/myagent/testing/cases/qa/: __init__.py  basic.py  multiturn.py  reasoning.py
src/myagent/testing/cases/search/: __init__.py  code_search.py  doc_search.py  web_search.py
src/myagent/testing/cases/tools/: __init__.py  api_tests.py  browser_tests.py  file_tests.py  shell_tests.py
src/myagent/tools/: __init__.py  browser_mcp.py  file.py  mcp.py  mcp_catalog.py  shell.py  web.py
src/openakita/: __init__.py  __main__.py  _ensure_utf8.py  config.py  main.py
src/openakita/api/: schemas.py  server.py
src/openakita/api/routes/: chat.py  chat_models.py  config.py  files.py  health.py  im.py  skills.py  token_stats.py
src/openakita/channels/: base.py  gateway.py  types.py
src/openakita/channels/adapters/: dingtalk.py  feishu.py  qq.py  qq_official.py  telegram.py  wework.py  wework_bot.py
src/openakita/channels/media/: audio_utils.py  handler.py
src/openakita/core/: __init__.py  agent.py  agent_state.py  brain.py  context_manager.py  identity.py  memory.py  prompt_assembler.py  ralph.py  reasoning_engine.py  response_handler.py  skill_manager.py  task_monitor.py  tool_executor.py
src/openakita/evaluation/: __init__.py  judge.py  metrics.py  optimizer.py  reporter.py  runner.py
src/openakita/evolution/: __init__.py  analyzer.py  generator.py  log_analyzer.py  self_check.py
src/openakita/llm/: capabilities.py  client.py  config.py  stt_client.py  types.py
src/openakita/llm/converters/: messages.py  multimodal.py  tools.py
src/openakita/llm/providers/: anthropic.py  base.py  openai.py
src/openakita/llm/registries/: __init__.py  anthropic.py  base.py  dashscope.py  minimax.py  openai.py  providers.json  siliconflow.py  volcengine.py
src/openakita/llm/setup/: cli.py
src/openakita/logging/: __init__.py  cleaner.py  config.py  handlers.py  session_buffer.py
src/openakita/mcp_servers/: __init__.py  web_search.py
src/openakita/memory/: consolidator.py  daily_consolidator.py  extractor.py  lifecycle.py  manager.py  model_hub.py  retrieval.py  storage.py  vector_store.py
src/openakita/orchestration/: __init__.py  handoff.py  master.py  registry.py
src/openakita/prompt/: __init__.py  budget.py  builder.py  compiler.py  guard.py  retriever.py
src/openakita/scheduler/: executor.py  scheduler.py  task.py  triggers.py
src/openakita/sessions/: manager.py  session.py
src/openakita/setup/: __init__.py  wizard.py
src/openakita/setup_center/: bridge.py
src/openakita/skills/: catalog.py  loader.py
src/openakita/storage/: database.py
src/openakita/tools/: __init__.py  browser_mcp.py  catalog.py  errors.py  mcp_catalog.py  shell.py  subprocess_bridge.py
src/openakita/tools/browser/: __init__.py  base.py
src/openakita/tools/definitions/: __init__.py  browser.py  im_channel.py  memory.py  persona.py  plan.py  profile.py
src/openakita/tools/desktop/: controller.py  tools.py
src/openakita/tools/desktop/actions/: keyboard.py
src/openakita/tools/handlers/: __init__.py  browser.py  desktop.py  filesystem.py  im_channel.py  mcp.py  memory.py  plan.py  profile.py  scheduled.py  skills.py  system.py
src/openakita/tracing/: __init__.py  exporter.py  tracer.py
tests/: test_new_features.py  test_scheduler_detailed.py  test_telegram_simple.py
tests/component/: test_retrieval_extra.py
tests/fixtures/: mock_llm.py
