[project]
name = "openakita"
version = "1.3.7"
description = "全能自进化AI Agent - 基于Ralph Wiggum模式，永不放弃"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "OpenAkita", email = "zacon365@gmail.com" }
]
keywords = ["ai", "agent", "claude", "autonomous", "self-evolving"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core LLM
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    
    # Web Search
    "ddgs>=8.0.0",
    
    # CLI and UI
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "typer>=0.12.0",
    
    # Async and HTTP
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "nest-asyncio>=1.5.0",
    
    # Database
    "aiosqlite>=0.20.0",
    
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Git operations
    "gitpython>=3.1.40",
    
    # Browser automation
    "playwright>=1.40.0",
    
    # YAML for config
    "pyyaml>=6.0.1",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    
    # Memory - Vector Search
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    
    # Multi-Agent Orchestration
    "pyzmq>=25.0.0",
    
    # IM Channels - Telegram (default)
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
# 飞书 IM 通道
feishu = [
    "lark-oapi>=1.2.0",
]

# 钉钉 IM 通道 (Stream 模式)
dingtalk = [
    "dingtalk-stream>=0.24.0",
]

# 企业微信 IM 通道
wework = [
    "aiohttp>=3.9.0",
    "pycryptodome>=3.19.0",
]

# QQ IM 通道 (OneBot 协议)
qq = [
    "websockets>=12.0",
]

# 语音识别 (Whisper)
whisper = [
    "openai-whisper>=20231117",
    "static-ffmpeg>=2.7",
]

# 浏览器 AI 代理
browser = [
    "browser-use>=0.11.8",
    "langchain-openai>=1.0.0",
]

# Windows 桌面自动化
windows = [
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8; platform_system == 'Windows'",
    "pyperclip>=1.8.2",
    "psutil>=5.9.0",
]

# 全部可选依赖
all = [
    # 注意：不要让项目“依赖自己”。这里展开成所有 extra 的合集。
    "lark-oapi>=1.2.0",
    "dingtalk-stream>=0.24.0",
    "aiohttp>=3.9.0",
    "pycryptodome>=3.19.0",
    "websockets>=12.0",
    "openai-whisper>=20231117",
    "static-ffmpeg>=2.7",
    "browser-use>=0.11.8",
    "langchain-openai>=1.0.0",
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8; platform_system == 'Windows'",
    "pyperclip>=1.8.2",
    "psutil>=5.9.0",
]

# 开发依赖
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
openakita = "openakita.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openakita"]

# 把仓库根目录的系统技能一并打进 wheel，保证 `pip install openakita` 后可用。
# 这些文件会被放到 site-packages/openakita/builtin_skills/system/...
force-include = { "skills/system" = "openakita/builtin_skills/system" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
# 说明：本项目代码历史较长，部分规则（如异常链、过度简化 if、函数内常量命名等）
# 会带来大量机械性修改且对运行行为无实质影响；CI 仍保持对核心错误/未使用导入等规则的约束。
ignore = [
    "E501",   # line length handled by formatter; keep ignored
    "B904",   # require `raise ... from err` inside except (too noisy for now)
    "N806",   # non-lowercase variable in function (constants in functions, third-party patterns)
    "SIM102", # collapsible-if (style-only)
    "SIM103", # needless-bool (style-only)
    "SIM105", # prefer contextlib.suppress (style-only)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
# 说明：代码库仍在逐步类型化；先保证 CI 可用，再逐步收紧规则。
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
# 现阶段将 mypy 作为“尽力而为”的辅助检查，避免阻塞主流程；
# 后续类型化推进后可移除此开关并逐步收紧规则。
ignore_errors = true
disable_error_code = [
    "attr-defined",
    "call-arg",
    "no-any-return",
    "union-attr",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
